--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \u001b[1;7 \\ \"Error: no test specified \u001b[1;7\\\u001b[D\\\" && exit 1\""
+    "test": "echo \u001b[1;7 \\ \"Error: no test specified \u001b[1;7\\\u001b[D\\\" && exit 1\"",
+    "build:ui": "rm -rf build && cd F://bloglist-app && npm run build --prod && cp -r build F://bloglist-server",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
+    "logs:prod": "heroku logs --tail"
   },
   "author": "Juha",
   "license": "MIT",
